Fixed text alignment on the live chat

--- a/src/pages/Sockets/LiveChat.scss
+++ b/src/pages/Sockets/LiveChat.scss
@@ -24,6 +24,10 @@
         padding-top: 1rem;
         padding-bottom: 0.25rem;
 
+        &--align-right{
+            text-align: right;
+        }
+
         span{
             color: rgba(0, 0, 0, 0.9);
         }
@@ -53,7 +57,13 @@
         }
 
         &--align-right{
+            margin-left: auto;
             text-align: right;
+            width: max-content;
+            overflow: hidden;
+            z-index: 1;
+            position: relative;
+            background: white;
         }
     }
 }
